--- a/sines.html
+++ b/sines.html
@@ -6,17 +6,6 @@
     <script src="Sinewavz.js"></script>
   </head>
   <body>
-    <canvas id="canvas"></canvas>
-    <script>
-      (function() {
-        var init = function() {
-          var canvas = document.getElementById("canvas");
-          var sketch = document.Sinewavz.sketch;
-          Processing(canvas,sketch);          
-        };
-        document.addEventListener("DOMContentLoaded", init);
-      })();
-    </script>
-    
+    <canvas datasrc="sines.pjs"></canvas>    
   </body>
 </html>
